# shasta

./: .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  automation-test.sh  clock.skewed.calcs.sh  dload.instrumentation.sh  iter.sh  jenkins.sh  package-lock.json  package.json  process.instrumentation.clock.skewed.py  process_instrumentation_clock_skewed.py  process_instrumentation_round_trip.py  process_json.py  run.sh
clock.skewed/: clock.skewed.calcs.sh  instrumentation.intermediate.json  process_instrumentation.py
config/: settings.js.j2  shasta-worker.json.j2
docker/: Dockerfile  Dockerfile.awslinux  build.sh  clear_ecr_images.sh  docker-compose.yml  docker.compose.build.push.ecr.sh  docker_login.sh  docker_run.sh  pull_from_ecr.sh  push_to_ecr.sh  snap-ecr-image.sh
docker/loadtest/: docker-compose.yml  run_loadtest.sh
monitoring/prometheus/: generate.prometheus.targets.js  readme.txt  targets.example.json
reports/: clock.skewed.calcs.sh  pauses.sh  process.instrumentation.clock.skewed.py  process.instrumentation.round.trip.py  process.pauses.py  validate.json.sh
round.trip/: iter.sh
shasta/: #package.json#  .eslintrc.cjs  .eslintrc.js  .gitignore  .mocharc.js  dev.env.sh  docker-compose.yml  docker-up.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
shasta/docker/: Dockerfile
shasta/src/: TAGS  automation.ts  loadtest.ts  main.ts  test.ping.ts
shasta/src/lib/: config.ts  constants.ts  load.readme.md
shasta/src/lib/aws/: bucket.s3.ts  codeCommit.redis.stream.ts  codeCommit.sqs.ts  codeCommit.ts  multicast.redis.stream.ts
shasta/src/lib/aws/sanity/: index.js  package.json
shasta/src/lib/kafka/: constants.ts  consumer_group_worker.ts  createKafka.ts
shasta/src/lib/logger/: slog.ts
shasta/src/lib/pubsub/: #loadtest.ts#  createTopic.ts  deleteTopics.ts  eventloop.stats.ts  flusher.ts  instrument.ts  load.consumer.node.md  loadtest.spec.ts  loadtest.ts  loadtestThread.ts  msk.serverless.loadtest.ts  prompts.txt  publish.ts  publisher.ts  redisKeyCleanup.ts  roundtrip.spec.ts  roundtrip.test.ts  subscriber.ts  topic.ts  worker.ts
shasta/src/lib/pubsub/images/: load.readme.md
shasta/src/lib/pubsub/logs/: README.md  readme.txt  redpanda.log.txt  stats.msk.cores.1.msgs.32.v10.json  stats.msk.cores.1.msgs.32.v11.json  stats.msk.cores.1.msgs.32.v12.readme.txt  stats.msk.cores.1.msgs.32.v16.readme.txt  stats.msk.cores.1.msgs.32.v3.json  stats.msk.cores.1.msgs.32.v9.json
shasta/src/lib/pubsub/tmp/: junk10.txt  junk11.txt  junk12.txt  junk14.txt  junk16.txt  junk17.txt  junk5.txt  junk6.txt  junk7.txt  junk8.txt  junk9.txt  msk.log.txt  msk_64x32.log.txt  redpanda.log.txt  stats.msk.cores.1.msgs.32.v12.readme.txt  stats.msk.cores.1.msgs.32.v14.readme.txt
shasta/submodules/: .gitignore  buf.gen.yaml  build-protos.sh  internal.proto
shasta/tests/: config.ts  readme.ec2.msk.test.txt
shasta/tests/common2/: createKafka.ts
shasta/tests/integ/: config.ts  primitives_round_trip.test.ts
shasta/tests/integ/common/: createKafka.ts
shasta/tests/integ/deep.tests/round.trip/: primitives_round_trip.test.ts  readme.setup.md  readme.test.md
shasta/tests/integ/kafka/: partition_tracking.ts  publisher.ts  readme.md  reply_to_subscriber.ts  worker_subscriber.ts
shasta/tests/integ/proto/: buf.gen.yaml  gen.sh
shasta/tests/kafka/: partition_tracking.ts  publisher.ts  reply_to_subscriber.ts  worker_subscriber.ts
shasta/tests/proto/: devinternal.proto
tools/: dload.instrumentation.sh  docker-send-commands.sh  send-commands.sh
